jenkins/jenkins-slave-ssh.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-slave-agent-deployment
  namespace: jenkins
  labels:
    app: jenkins-slave-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-slave-agent
  template:
    metadata:
      labels:
        app: jenkins-slave-agent
    spec:
      containers:
        - name: jenkins-slave
          image: ujstor/jenkins-slave-python:0.0.4
          ports:
            - containerPort: 22
          securityContext:
            privileged: true
          volumeMounts:
            - name: jenkins-slave-data
              mountPath: /var/empty
      volumes:
        - name: jenkins-slave-data
          persistentVolumeClaim:
            claimName: jenkins-slave-pvc


---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-slave-service
  namespace: jenkins
spec:
  selector:
    app: jenkins-slave-agent
  ports:
    - protocol: TCP
      port: 22
      targetPort: 22
