jenkins/jenkins-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    cert-manager.io/issue-temporary-certificate: "true"
    cert-manager.io/acme-challenge-type: http01
  name: jenkins
  namespace: jenkins

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - jenkins-k3s.ujstor.com
    secretName: jenkins-tls
  rules:
  - host: jenkins-k3s.ujstor.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-service
            port:
              number: 8080
